<resources>
    <string name="choose_reg_type">Выберите тип\nрегистрации:</string>
    <string name="next">Далее</string>
    <string name="check">Проверка</string>
    <string name="back">Назад</string>
    <string name="close">Закрыть</string>
    <string name="invalid_lead_symbol">ИНН должен начинаться только с цифр 0, 1, 2, 4</string>
    <string name="input_phone_number">Номер телефона</string>
    <string name="input_sms_code">Введите код из SMS</string>
    <string name="organization">Организация</string>
    <string name="individual">Физическое лицо</string>
    <string name="choose_type_message">Нужно выбрать тип</string>
    <string name="passport">Паспорт</string>
    <string name="passport_data">Паспортные данные</string>
    <string name="inn">ИНН</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="confirm">Подтвердить</string>
    <string name="confirm_recognition_query">Нажав \"ПОДТВЕРДИТЬ\" Вы гарантируете корректность данных, и осознаете ответственность за действие</string>
    <string name="pay_now">Оплатить сейчас</string>
    <string name="pay_later">Оплатить позже</string>
    <string name="payment_message">Ваши данные будут обработаны после оплаты Электроно Цифровой Подписи.  Её стоимость на 12 месяцев составит 400 сом.</string>
    <string name="payment_later_message">Внимание!\n\nВаша заявка на получение Электронной Цифровой Подписи будет активна в течении 3-х дней.\nВ случае не уплаты, Вам необходимо будет пройти регистрацию повторно.</string>
    <string name="create_passport_front_photo">Сканирование лицевой стороны паспорта</string>
    <string name="create_passport_back_photo">Сканирование оборотной стороны паспорта</string>
    <string name="missing_permission_message">Невозможно продолжить без необходимых разрешений. Предоставьте нужные разрешения и повторите попытку.</string>
    <string name="create_passport_selfie_photo">Сфотографируйте паспорт рядом с лицом</string>
    <string name="create_selfie_photo">Сфотографируйте свое лицо</string>
    <string name="selfie_with_passport_photo_title">Сэлфи с паспортом</string>
    <string name="rephoto">Переснять</string>
    <string name="registration_steps">Шаги регистрации</string>
    <string name="scan">Сканировать</string>
    <string name="face_scaning_title">Сканирование лица</string>
    <string name="pin">Персональный номер</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="patronymic">Отчество</string>
    <string name="complete_registration_message">Вы успешно подали Заявку на получение Квалифицированной Электронной Подписи.\n\nПосле проверки ваших данных Вы получите уведомление</string>
    <string name="registration_second_message">Проверка может занимать до 30 минут в рабочие дни</string>
    <string name="complete">Готово</string>
    <string name="сongratulate">Поздравляем!</string>
    <string name="refuse_moderator">Отказано модератором</string>
    <string name="passport_front_photo">Фотография лицевой стороны паспорта</string>
    <string name="passport_back_photo">Фотография оборотной стороны паспорта</string>
    <string name="selfie">Сэлфи</string>
    <string name="selfie_with_passport">Сэлфи с паспортом</string>
    <string name="change">Изменить</string>
    <string name="cancel_registration_query">Вы действительно хотите отмеить регистрацию?</string>
    <string name="order_not_found_message">Ваша заявка не найдена, подайте заявку еще раз</string>
    <string name="order_completed_message">Вы получили Квалифицированную Электронную Подпись</string>
    <string name="no_internet_error">Проверьте подключение к интернету</string>
    <string name="timeout_error">Не удалось получить ответ от сервера, повторите попытку позже</string>
    <string name="token_expire_error"></string>
    <string name="unknown_error">Произошла неизвестная ошибка, повторите попытку позже</string>
    <string name="cancel">Отмена</string>
    <string name="ok">Ок</string>
    <string name="your_phone">Ваш номер телефона</string>
    <string name="phone_confirmation">Подтверждение номера</string>
    <string name="receive_code_again">Получить код повторно</string>
    <string name="registration_complete_title">Регистрация завершена</string>
    <string name="repeat">Повторить</string>
    <string name="succes_resend_sms">Повторное SMS успешно оправлено</string>
    <string name="sms_repeate_timeout_format">Вы можете запросить код еще\nраз через %s</string>
    <string name="repeat_sms">Получить код еще раз</string>
    <string name="set_passport_to_frame">Поместите паспорт в рамку</string>
    <string name="accept_agreement">Принимаю соглашение</string>
    <string name="reason_refusal">Причины отказа:</string>
    <string name="input_phone_number_">Введите номер телефона</string>
    <string name="send_sms_message">Smart-iD отправит SMS-cообщение, чтобы подтвердить ваш номер телефона</string>
    <string name="recapture">Переснять</string>
    <string name="create_photo">Сфотографировать</string>
    <string name="continues">Продолжить</string>
    <string name="passport_data_need_compare_message">Данные должны совпасть с паспортом</string>
    <string name="put_face_to_oval">Поместите лицо в овал</string>
    <string name="face_scan">Скан лица</string>
    <string name="passport_photo">Фото паспорта</string>
    <string name="agree_offer_agreement">Соглашаюсь с договором оферты</string>
    <string name="agree_reglament">Присоединяюсь к регламенту ПУЦ</string>
    <string name="agree_cvalification">Ознакомлен со сведениями, содержащимися в квалифицированном сертификате</string>
    <string name="done">Выполнено</string>
    <string name="payment_type">Cпособ оплаты</string>
    <string name="cancel_registration_message">Если вы прервете процесс регистрации, Вам прийдется пройти его полность заново.\nПрервать регистрацию?</string>
    <string name="focus_on_passport_front_side">Наведите камеру телефона на лицевую сторону паспорта</string>
    <string name="focus_on_passport_back_side">Наведите камеру телефона на оборотную сторону паспорта</string>
    <string name="document_not_recognized">Не удалось распознать документ</string>
    <string name="invalid_document_side">Не та сторона документа</string>
    <string name="invalid_document_type">Неподдерживаемый тип документа</string>
    <string name="recognition_not_initialized">Не удалось инициализировать распознавание</string>
    <string name="take_permission_message">Для продолжения работы приложения, Вы должны дать запрошенные разрешения.</string>
    <string name="many_faces_error">В кадре лиц больше чем одно</string>
    <string name="dont_smile">Пожалуйста не улыбайтесь</string>
    <string name="put_face_on_center_photo">Разместите лицо в центре фото</string>
    <string name="look_at_camera">Пожалуйста посмотрите в камеру</string>
    <string name="make_serious_face">Сделайте серьезное лицо</string>
    <string name="smile_please">Пожалуйста улыбнитесь</string>
    <string name="scan_again">Повторить сканирование</string>
    <string name="different_documents_error">На фото не тот же документ что предыдущий, сделайте фото повторно</string>
    <string name="date_birth">Дата рождения</string>
    <string name="date_expiry">Дата окончания срока действия</string>
    <string name="date_issue">Дата выдачи</string>
    <string name="authority">Орган выдавший документ</string>
    <string name="photo">Фото</string>


    <string name="inn_toolbar">Вход в систему</string>
    <string name="employee_inn_toolbar">Введите ПИН сотрудника</string>
    <string name="missing_inn">Такого ИНН не существует</string>
    <string name="unknow_exception">Произошла неизвестная ошибка, повторите запрос позже.</string>
    <string name="pincode_title">Подтверждение</string>
    <string name="repeate_sms">Получить код еще раз</string>
    <string name="input_pincode">Введите пин-код</string>
    <string name="input_sms_pincode">Введите пин-код из смс</string>
    <string name="invalid_pin">Неверено введен пин-код</string>
    <string name="receive_sms_again">Получить код еще раз</string>
    <string name="input_organization_pin">Введите ИНН организации</string>
    <string name="input_employee_pin">Введите ИНН сотрудника</string>
    <string name="success_resend_sms">Повторное SMS успешно оправлено</string>
    <string name="cancel_action_query">Хотите отменить действие?</string>
    <string name="cancel_auth_query">Хотите отменить авторизацию?</string>

    <string name="my_number_is_changed">У меня поменялся номер телефона</string>
    <string name="login_legal_entities">Вход для юридических лиц</string>
    <string name="registration">Регистрация</string>
    <string name="code">Код</string>
    <string name="passport_front_side">Лицевая сторона паспорта</string>
    <string name="passport_back_side">Оборотная сторона паспорта</string>
    <string name="registration_steps_desc">Шаги регистрации физического лица</string>
    <string name="registration_complete_desc">Для Вас создана Квалифицированная Электронная Подпись\n\nПосле проверки ваших данных, Вы получите уведомление</string>
    <string name="confirm_with_license"><![CDATA[Соглашаюсь с <a href="https://google.com">договором оферты</a>]]></string>
    <string name="confirm_with_puts"><![CDATA[Присоединяюсь к <a href="https://google.com">регламенту ПУЦ</a>]]></string>
    <string name="confirm_handle_data"><![CDATA[Соглашаюсь на <a href="https://google.com">обработку персональных данных</a>]]></string>
    <string name="confirm_with_certificate"><![CDATA[Ознакомлен с сведениями содержащимися в <a href="https://google.com">квалифицированном сертификате</a>]]></string>
    <string name="login_individual_entities">Вход для физических лиц</string>
</resources>
