<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_complete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/product_sans_medium"
                android:gravity="center_horizontal"
                android:text="@string/сongratulate"
                android:textColor="@color/material_black"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="220dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/success_registration" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center_horizontal"
                    android:text="@string/order_completed_message"
                    android:textColor="@color/material_black"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/cb_offer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:checked="false"
                    android:fontFamily="@font/roboto"
                    android:text="@string/agree_offer_agreement"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/cb_puc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:checked="false"
                    android:fontFamily="@font/roboto"
                    android:text="@string/agree_reglament"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/cb_certificate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:checked="false"
                    android:fontFamily="@font/roboto"
                    android:text="@string/agree_cvalification"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
            android:id="@+id/btn_complete"
        style="@style/Button.Normal.Outlined"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_height"
            android:layout_marginBottom="32dp"
            android:enabled="false"
            android:text="@string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>